# server/src/routes/index.ts
@@ -1,9 +1,9 @@
 import { Router } from "express"
 import { productRouter } from "./product.route"
 import { authRouter } from "./auth.route"
-import { validateToken } from "../middlewares/validate-token.middleware"
+import { auth } from "../middlewares/validate-token.middleware"
 
 export const routes = Router()
 
-routes.use("/products", validateToken, productRouter)
+routes.use("/products", auth, productRouter)
 routes.use("/auth", authRouter)
