# server/src/swagger.ts
@@ -17,10 +17,19 @@ export async function runSwaggerAutogen() {
             securitySchemes: {
                 bearerAuth: {
                     type: 'http',
+                    in: 'header',
+                    name: 'Authorization',
+                    description: 'Bearer token to access these api endpoints',
                     scheme: 'bearer',
-                }
-            }
-        }
+                    bearerFormat: 'JWT',
+                },
+            },
+        },
+        security: [
+            {
+                bearerAuth: [],
+            },
+        ]
     }
 
 
